[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.53", features = [
    "tokio",
    "tcp",
    "rendezvous",
    "ping",
    "identify",
    "noise",
    "yamux",
    "request-response",
    "macros"
] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
# The correct feature for the aio module
unsigned-varint = { version = "0.7", features = ["futures"] }
eframe = { version = "0.27", default-features = true, features = ["wgpu"] }
egui = "0.27"